# NFC-Attendance-System

./: ER_Diagram.docx  app.py  pyproject.toml  readme.MD  requirements.txt  restendpoint_nfc.py  restfulapi.py
instance/: nfc.sqlite3
nfc_app/: README.md  pubspec.yaml
nfc_app/android/app/: build.gradle
nfc_app/android/app/src/main/: AndroidManifest.xml
nfc_app/ios/Runner/: Info.plist
nfc_app/ios/Runner.xcodeproj/: project.pbxproj
nfc_app/lib/: main.dart
nfc_app/lib/controllers/: attendance_controller.dart
nfc_app/lib/models/: attendance.dart
nfc_app/lib/views/: home.dart
nfc_app/linux/: CMakeLists.txt  my_application.cc
nfc_app/macos/Runner.xcodeproj/: project.pbxproj
nfc_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
nfc_app/macos/Runner/Configs/: AppInfo.xcconfig
nfc_app/test/: widget_test.dart
nfc_app/web/: index.html  manifest.json
nfc_app/windows/: CMakeLists.txt
nfc_app/windows/runner/: Runner.rc  main.cpp
