[tool.poetry]
name = "nfc-proj"
version = "0.1.0"
description = ""
authors = ["Tejaswini <tejaswinithota83@gmail.com~>"]
readme = "README.md"
packages = [{include = "nfc_proj"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-marshmallow = "^0.15.0"
sqlalchemy = "^2.0.16"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
